--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Portfolio website created by Talha Khalid"
+      content="Portfolio website created by Syed Sohaib Ahmed"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -31,7 +31,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Talha Khalid </title>
+    <title>Syed Sohaib Ahmed</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
